[gd_scene format=3 uid="uid://b05bnexelld4s"]

[ext_resource type="Script" uid="uid://byh5bcc7wyf5s" path="res://scripts/control.gd" id="1_5p55f"]

[node name="Control" type="Control" unique_id=369915701]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_5p55f")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1921315054]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -768.0
offset_bottom = -127.0
grow_horizontal = 2
grow_vertical = 2

[node name="Level1" type="Button" parent="VBoxContainer" unique_id=330804931]
layout_mode = 2
text = "Level 1"

[node name="Level2" type="Button" parent="VBoxContainer" unique_id=755209790]
layout_mode = 2
text = "Level 2"

[node name="Level3" type="Button" parent="VBoxContainer" unique_id=2014888874]
layout_mode = 2
text = "Level 3"

[node name="Level4" type="Button" parent="VBoxContainer" unique_id=1353477099]
layout_mode = 2
text = "Level 4
"

[node name="Level5" type="Button" parent="VBoxContainer" unique_id=581654193]
layout_mode = 2
text = "Level 5
"

[node name="Level6" type="Button" parent="VBoxContainer" unique_id=1601633663]
layout_mode = 2
text = "Level 6"

[node name="Level7" type="Button" parent="VBoxContainer" unique_id=1357752709]
layout_mode = 2
text = "Level 7"

[node name="Level8" type="Button" parent="VBoxContainer" unique_id=1926477363]
layout_mode = 2
text = "Level 8"

[node name="Level9" type="Button" parent="VBoxContainer" unique_id=382038066]
layout_mode = 2
text = "Level 9
"

[node name="Level10" type="Button" parent="VBoxContainer" unique_id=1983423810]
layout_mode = 2
text = "Level 10"

[node name="Level11" type="Button" parent="VBoxContainer" unique_id=1281252822]
layout_mode = 2
text = "Level 11"

[node name="Level12" type="Button" parent="VBoxContainer" unique_id=1310826737]
layout_mode = 2
text = "Level 12"

[node name="Level13" type="Button" parent="VBoxContainer" unique_id=1662626612]
layout_mode = 2
text = "Level 13"

[node name="Level14" type="Button" parent="VBoxContainer" unique_id=916023983]
layout_mode = 2
text = "Level 14
"

[node name="Level15" type="Button" parent="VBoxContainer" unique_id=1756667347]
layout_mode = 2
text = "Level 15
"
